--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "diggecard/diggecard",
+  "name": "digg-ecard/diggecard",
   "description": "A Magento 2 module that add custom giftcard",
   "type": "magento2-module",
   "version": "1.0.1",
